Fix Comments and Orders error.message | validation | test
